--- a/style.css
+++ b/style.css
@@ -19,16 +19,34 @@
 
 main {
   width: 840px;
-  display: flex;
-  justify-content: right;
-  margin: 0 auto;
-}
-
-.blog-box {
-  padding: 50px 0;
+  margin: 50px auto;
 }
 
 .blog-item {
+  margin-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
   padding-bottom: 30px;
-  border-bottom: 1px solid black;
+}
+
+.service1 {
+  margin-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
+  padding-bottom: 30px;
+}
+
+.service2 {
+  margin-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
+  padding-bottom: 30px;
+}
+
+.service3 {
+  margin-bottom: 30px;
+  border-bottom: 1px solid #d1d1d1;
+  padding-bottom: 30px;
+}
+
+.service4 {
+  border-bottom: 1px solid #d1d1d1;
+  padding-bottom: 30px;
 }
